<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fyp.CrashCourseMain">

    <Button
        android:id="@+id/intro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:clickable="true"
        android:padding="20sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/and_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/and_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:padding="10sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/or_button"
        app:layout_constraintTop_toBottomOf="@+id/intro_button" />
    <Button
        android:id="@+id/or_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:padding="10sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/not_button"
        app:layout_constraintTop_toBottomOf="@+id/and_button" />
    <Button
        android:id="@+id/not_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not"
        android:padding="10sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_button" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="26sp"
        android:layout_height="26sp"
        android:layout_margin="20sp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>