<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengesMain">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/challenge_intro"
        app:layout_constraintBottom_toTopOf="@+id/level_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/level_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_one"
        android:clickable="true"
        android:padding="20sp"
        android:textColor="@color/orange_red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/level_two"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/level_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_two"
        android:padding="20sp"
        android:textSize="30sp"
        android:textColor="@color/deep_pink"
        android:enabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/level_three"
        app:layout_constraintTop_toBottomOf="@+id/level_one" />
    <Button
        android:id="@+id/level_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_three"
        android:padding="20sp"
        android:textSize="30sp"
        android:textColor="@color/medium_slate_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_two" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="26sp"
        android:layout_height="26sp"
        android:layout_margin="20sp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>