<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrashCourseIntroTopic5">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="26sp"
        android:layout_height="26sp"
        android:layout_margin="20sp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:progressTint="@color/navy_700"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logic_operations_explanation2" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/done"
        android:layout_margin="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prev_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/previous_page"
        android:layout_margin="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logic_operations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginBottom="30sp"
        android:layout_marginVertical="10sp"
        android:text="@string/logic_operations_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintBottom_toTopOf="@id/logic_operations_explanation1" />

    <TextView
        android:id="@+id/logic_operations_explanation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        android:padding="30sp"
        android:text="@string/logic_operations_explanation1"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/logic_operations_explanation2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logic_operations_title" />

    <TextView
        android:id="@+id/logic_operations_explanation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60sp"
        android:padding="30sp"
        android:text="@string/logic_operations_explanation2"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/logic_operations_explanation1" />

</androidx.constraintlayout.widget.ConstraintLayout>