<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrashCourseLogicTopic2">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="26sp"
        android:layout_height="26sp"
        android:layout_margin="20sp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/prev_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/previous_page"
        android:layout_margin="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/next_page"
        android:layout_margin="20sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100sp"
        android:progress="40"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logic_operations_AND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginVertical="10sp"
        android:text="@string/and"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintBottom_toTopOf="@id/and_image" />

    <ImageView
        android:id="@+id/and_image"
        android:layout_width="419dp"
        android:layout_height="203dp"
        android:padding="10sp"
        android:contentDescription="TODO"
        android:src="@drawable/and"
        app:layout_constraintBottom_toTopOf="@id/logic_operations_AND_explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logic_operations_AND" />

    <TextView
        android:id="@+id/logic_operations_AND_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30sp"
        android:padding="10sp"
        android:text="@string/logic_operations_AND_explanation"
        android:textAlignment="textStart"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/next_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/and_image" />

</androidx.constraintlayout.widget.ConstraintLayout>